# logitrack

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements.txt
app/: database.py  dependencies.py  main.py  models.py
app/core/: security.py
app/routers/: auth.py  orders.py  users.py  vehicles.py
app/schemas/: base.py  common.py  order.py  user.py  vehicle.py
tests/: conftest.py  test_auth.py  test_orders.py  test_users.py  test_vehicles.py
